--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -12,4 +12,17 @@
     <string name="edgesuppression_name">Edge rejection</string>
     <string name="edgesuppression_summary">Set ignore accidental touch area for curved edges</string>
     <string name="edgesuppression_enable_name">Enable edge rejection</string>
+
+    <!-- Thermal Profiles -->
+    <string name="thermal_title">Thermal profiles</string>
+    <string name="thermal_summary">Per-app thermal profile configuration</string>
+    <string name="thermal_default">Default</string>
+    <string name="thermal_benchmark">Benchmark</string>
+    <string name="thermal_browser">Browser</string>
+    <string name="thermal_camera">Camera</string>
+    <string name="thermal_dialer">Dialer</string>
+    <string name="thermal_gaming">Gaming</string>
+    <string name="thermal_navigation">Navigation</string>
+    <string name="thermal_streaming">Streaming</string>
+    <string name="thermal_video">Video</string>
 </resources>
